--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-
+GameDefaultMap=/Game/Lightshomework.Lightshomework
+EditorStartupMap=/Game/Lightshomework.Lightshomework
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
